<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_wicket"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_counTitleSize"
            android:text="@string/title_count_check" />

        <Button
            android:id="@+id/checkImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bt_menu_button"
            android:text="@string/button_menu"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_butWordSize" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
    	android:orientation="horizontal"
        android:layout_weight="0.4" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
        	android:layout_weight="6"
        	android:background="@drawable/bg_set_left" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
        	android:layout_weight="1"
        	android:background="@drawable/bg_set_middle" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
        		android:layout_weight="1" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
        			android:layout_weight="3" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" >
                        
                        <TextView
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:text="@string/check_id_num"
		                    android:textColor="@android:color/black"
		                    android:textSize="@dimen/sp_butWordSize" />
                        <EditText
		                    android:id="@+id/CheckIDEditText"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:ems="18"
		                    android:hint="@string/edit_hint_idnum"
		                    android:inputType="text" />
                        
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
        			android:layout_weight="1" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
        				android:layout_weight="1"
                        android:orientation="vertical" >
                    </LinearLayout>
                    
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
        				android:layout_weight="0.1" >
                        
                        <TableRow
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content" >
			
			                <TextView
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:text="@string/check_order_id"
			                    android:textColor="@android:color/black"
			                    android:textSize="@dimen/sp_butWordSize" />
			
			                <EditText
			                    android:id="@+id/CheckGoodsIDEditText"
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:ems="10"
			                    android:hint="@string/edit_hint_orderid"
			                    android:inputType="number" />
			
			                <TextView
			                    android:layout_width="@dimen/dp_check_gap"
			                    android:layout_height="wrap_content" />
			
			                <TextView
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:text="@string/check_good_name"
			                    android:textColor="@android:color/black"
			                    android:textSize="@dimen/sp_butWordSize" />
			
			                <EditText
			                    android:id="@+id/CheckGoodNameEditText"
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:ems="10"
			                    android:hint="@string/edit_hint_goodname" />
			            </TableRow>
                        
                        <TableRow android:layout_width="wrap_content" >

			                <TextView
			                    android:layout_width="wrap_content"
			                    android:layout_height="@dimen/dp_check_gap" />
			                
			            </TableRow>
			
			            <TableRow
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content" >
			
			                <TextView
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:text="@string/check_time_begin"
			                    android:textColor="@android:color/black"
			                    android:textSize="@dimen/sp_butWordSize" />
			
			                <Button
			                    android:id="@+id/CheckTimeBeginButton"
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:background="@drawable/bt_button"
			                    android:text="@string/check_time_defaul"
			                    android:textSize="@dimen/sp_butWordSize" />
			
			                <TextView
			                    android:layout_width="@dimen/dp_check_gap"
			                    android:layout_height="wrap_content" />
			
			                <TextView
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:text="@string/check_time_end"
			                    android:textColor="@android:color/black"
			                    android:textSize="@dimen/sp_butWordSize" />
			
			                <Button
			                    android:id="@+id/CheckTimeEndButton"
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:background="@drawable/bt_button"
			                    android:text="@string/check_time_defaul"
			                    android:textSize="@dimen/sp_butWordSize" />
			            </TableRow>
                        
                        <TableRow android:layout_width="wrap_content" >

			                <TextView
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:textSize="@dimen/dp_check_gap" />
			                
			            </TableRow>
			
			            <TableRow
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content" >
			
			                <TextView
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:text="@string/check_paystatus"
			                    android:textColor="@android:color/black"
			                    android:textSize="@dimen/sp_butWordSize" />
			
			                <Spinner
			                    android:id="@+id/spinnerPayStatus"
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content" />
			
			                <TextView
			                    android:layout_width="@dimen/dp_check_gap"
			                    android:layout_height="wrap_content" />
			
			                <TextView
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:text="@string/check_usestatus"
			                    android:textColor="@android:color/black"
			                    android:textSize="@dimen/sp_butWordSize" />
			
			                <Spinner
			                    android:id="@+id/spinnerUsedStatus"
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:clickable="false" />
			            </TableRow>
			            
                    </TableLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
        				android:layout_weight="1"
                        android:orientation="vertical" >
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
        		android:layout_weight="5" >

                <Button
                    android:id="@+id/CheckCheckButton"
                    android:layout_width="@dimen/dp_okbutton_width"
                    android:layout_height="@dimen/dp_okbutton_hight"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bt_button"
                    android:text="@string/check_check"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_butWordSize" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
        	android:layout_weight="6"
        	android:background="@drawable/bg_set_right" >
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/init_support1"
            android:textSize="@dimen/sp_welNoteSize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/init_support0"
            android:textSize="@dimen/sp_welNoteSize" />

    </RelativeLayout>

</LinearLayout>